# sip-rtp-to-grpc

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  Makefile.test  README.md  grpc-server-setup.md  improvement-neede.md  kamailio-setup.md
.github/workflows/: action.yaml  publish.yml  release.yml
audio_socket/: server.py
config/: gateway.yaml
doc/: file_structure.md  protocols.md
grpc_server/: server.py
grpc_server/proto/: voicebot_pb2.py  voicebot_pb2_grpc.py
proto/: voicebot.proto
sip-rtp-gateway/config/: gateway.yaml
sip-rtp-gateway/doc/: architecture.md  deployment_guide.md  flows.md  run_guide.md
sip-rtp-gateway/proto/: voicebot.proto
sip-rtp-gateway/src/: main.cpp
sip-rtp-gateway/src/app/: Config.h  Logger.h  SignalHandler.cpp  SignalHandler.h
sip-rtp-gateway/src/call/: CallRegistry.cpp  CallRegistry.h
sip-rtp-gateway/src/grpc/: VoiceBotClient.h
sip-rtp-gateway/src/media/stages/: EchoStage.cpp  GrpcBridgeStage.cpp  Stage.h
sip-rtp-gateway/src/rtp/: JitterBuffer.cpp  JitterBuffer.h  RtpServer.cpp  RtpWorker.cpp  RtpWorker.h
sip-rtp-gateway/src/sdp/: SdpAnswer.cpp  SdpParser.h
sip-rtp-gateway/src/sip/: SipDialog.h  SipMessage.cpp  SipParser.cpp  SipParser.h  SipResponseBuilder.cpp  SipResponseBuilder.h  SipTransaction.h
sip-rtp-gateway/src/util/: Net.h  ObjectPool.h
src/app/: Config.cpp  Config.h  GatewayApp.cpp  GatewayApp.h  Logger.cpp
src/audiosocket/: AudioSocketClient.cpp  AudioSocketClient.h
src/call/: CallRegistry.cpp  CallRegistry.h  CallSession.cpp  CallSession.h  CallStateMachine.cpp  CallStateMachine.h
src/grpc/: VoiceBotClient.cpp
src/media/: MediaPipeline.cpp  MediaPipeline.h
src/media/stages/: AudioSocketStage.cpp  AudioSocketStage.h  EchoStage.h  GrpcBridgeStage.h  RecorderStage.cpp  RecorderStage.h  Stage.cpp
src/rtp/: JitterBuffer.h  RtcpPacket.cpp  RtcpPacket.h  RtpPacket.cpp  RtpPacket.h  RtpServer.cpp  RtpServer.h  RtpWorker.cpp  RtpWorker.h
src/sdp/: SdpAnswer.cpp  SdpAnswer.h  SdpParser.cpp
src/sip/: CallState.h  SipConstants.h  SipDialog.cpp  SipDialog.h  SipMessage.cpp  SipMessage.h  SipParser.cpp  SipServer.cpp  SipServer.h  SipTransaction.cpp
src/sip/states/: ActiveState.cpp  ActiveState.h  IdleState.cpp  IdleState.h  ProceedingState.cpp  ProceedingState.h  TerminatedState.cpp  TerminatedState.h
src/util/: G711Utils.h  Net.cpp  ObjectPool.h  WavWriter.h
tests/: Dockerfile.sipp  Dockerfile.tcp  apply_impairments.sh  docker-compose.test.yaml  tcp_receiver.py
tests/sipp/: register.xml  uac_pcma.xml
tests/utils/: gen_pcap.py
